src/objects/OAuth_Token__c.object
<CustomObject>
    <fields>
        <fullName>Is_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OAuthService__c</fullName>
        <label>OAuthService</label>
        <referenceTo>OAuthService__c</referenceTo>
        <relationshipLabel>OAuth Token</relationshipLabel>
        <relationshipName>OAuth_Tokens</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OAuth_Token</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Realm_Id__c</fullName>
        <label>Realm Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth Token</label>
    <nameField>
        <label>OAuth Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuth Token</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>